src/index.css
:root {
  --primary-color: #0ba95b;
  --dark-background-color: #2a2a2a;
  --dark-background-color-secondary: #222222;
  --light-background-color: #3a3a3a;
  --dark-text-color: #999;
  --light-text-color: #eee;
  --secondary-text-color: #999;
  --border-color: #ddd;
  --border-radius: .25em;
  --accent-color: #0ba95b;
  --error-color: #ff0000;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--dark-background-color);
  color: var(--light-text-color);
  font-size: 1rem;
  line-height: 1.5;
}

a {
  color: inherit;
}

input[type="text"], input[type="password"], input[type="email"] {
  width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.2;
}

.container {
  max-width: 600px;
  margin: auto;
  padding: 24px;
}

header {
  margin-bottom: 1.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.todo-list__title--no-link {
  text-decoration: none;
}

.welcome {
  text-align: center;
  padding: 2rem;
}

.todo-list__auth-buttons-container {
  display: flex;
  gap: 1rem;
}

/* auth buttons - same style as li.todo-list__todo button */
.todo-list__auth-button {
  background: none;
  border: none;
  font-size: 1rem;
  color: var(--light-text-color);
  text-decoration: underline;
  cursor: pointer;
}

.todo-list__auth-form-container h2,
.todo-list__auth-form-container p {
  margin-bottom: 1rem;
}


form.todo-list__auth-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-bottom: 2rem;
}

form.todo-list__auth-form > .auth-form-input-wrapper > label {
  display: none;
}

form.todo-list__auth-form input,
form.todo-list__auth-form button {
  color: var(--light-text-color);
  border: 1px solid var(--border-color);
  background-color: transparent;
  padding: 1rem;
  border-radius: var(--border-radius);
  font-size: 1rem;
}

form.todo-list__auth-form input:focus {
  outline: none;
  border: 1px solid var(--accent-color);
}

.todo-list__persist-checkbox-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: .5rem;
}

form.todo-list__auth-form button {
  cursor: pointer;
}

form.todo-list__auth-form button:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

/* the main ul */
ul.todo-list__todos {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

ul.todo-list__todos li {
  list-style: none;
  padding: 0;
  border-radius: var(--border-radius);
}

ul.todo-list__todos li:not(:first-child) {
  background-color: var(--light-background-color);
  padding: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}

form.todo-list__composer {
  width: 100%;
  display: flex;
  justify-content: space-between;
  gap: .5rem;
}

form.todo-list__composer input, .todo-list__composer button {
  color: var(--light-text-color);
  border: 1px solid var(--border-color);
  background-color: transparent;
  padding: 1rem;
  border-radius: var(--border-radius);
  font-size: 1rem;
}

form.todo-list__composer input {
  flex-grow: 1;
}

form.todo-list__composer input:focus {
  outline: none;
  border: 1px solid var(--accent-color);
}

form.todo-list__composer button {
  cursor: pointer;
}

li.todo-list__todo > label,
li.todo-list__todo > .todo-list__todo-buttons-container,
.todo-list__persist-checkbox-container > label {
  display: flex;
  align-items: center;
  cursor: pointer;
}

li.todo-list__todo > label,
.todo-list__persist-checkbox-container > label {
  gap: .5rem;
}

li.todo-list__todo > .todo-list__todo-buttons-container {
  gap: 1rem;
}

.todo-list__todo-checkbox-container,
.todo-list__persist-checkbox-container {
  position: relative;
}

/* hide the default checkbox */
li.todo-list__todo input[type="checkbox"],
.todo-list__persist-checkbox-container input[type="checkbox"] {
  visibility: hidden;
  position: absolute;
}

/* custom checkbox */
.todo-list__todo-checkbox,
.todo-list__persist-checkbox {
  display: block;
  width: 24px;
  height: 24px;
  border: 1px solid #FFF;
  border-radius: 50%;
}

/* checkmark */
.todo-list__todo-checkbox::after,
.todo-list__persist-checkbox::after {
  content: "";
  position: absolute;
  left: 5px;
  top: 6px;
  width: 12px;
  height: 6px;
  border: 2px solid var(--border-color);
  border-top: none;
  border-right: none;
  transform: rotate(-45deg);
  opacity: 0; /* hide the checkmark by default */
}

li.todo-list__todo input[type="checkbox"]:checked + .todo-list__todo-checkbox,
.todo-list__persist-checkbox-container input[type="checkbox"]:checked + .todo-list__persist-checkbox {
  background-color: var(--accent-color);
  border-color: var(--accent-color);
}

/* show the checkmark when the default checkbox is checked */
li.todo-list__todo input[type="checkbox"]:checked + .todo-list__todo-checkbox::after,
.todo-list__persist-checkbox-container input[type="checkbox"]:checked + .todo-list__persist-checkbox::after {
  opacity: 1;
}

li.todo-list__todo > label:has(input[type="checkbox"]:checked) > .todo-list__todo-task {
  text-decoration: line-through;
  color: var(--dark-text-color);
}

li.todo-list__todo > label:has(input[type="text"]) {
  flex-grow: 1;
}

.todo-list__todo-task, 
.todo-list__todo-edit-task-input {
  width: 100%;
  padding: .25em;
  background-color: transparent;
  border: 1px solid;
  border-radius: var(--border-radius);
  font-size: 1rem;
  color: var(--light-text-color);
}

.todo-list__todo-task {
  border-color: transparent;
}

.todo-list__todo-edit-task-input {
  border-color: var(--border-color);
}

.todo-list__todo-task--editLoading {
  color: var(--dark-text-color);
}

/* edit, delete, save, cancel buttons */
li.todo-list__todo button {
  background: none;
  border: none;
  font-size: 1rem;
  color: var(--light-text-color);
  text-decoration: underline;
  cursor: pointer;
}

footer {
  padding: 2rem 0;
  text-align: center;
  font-size: 0.875rem;
  color: var(--light-text-color);
}

.auth-error {
  margin-bottom: 1rem;
}

.error {
  color: var(--error-color);
}

.auth-form-input-wrapper {
  position: relative;
  width: 100%;
}

.auth-form-input__valid {
  display: flex;
  align-items: center;
  position: absolute;
  top: 0;
  right: 1rem;
  height: 100%;
  line-height: normal;
}

.auth-form-input-error-message-enter {
  opacity: 0;
  transform: translateY(-10px);
}
.auth-form-input-error-message-enter-active {
  opacity: 1;
  transform: translateY(0px);
  transition: opacity 330ms ease-out, transform 330ms ease-out;
}
.auth-form-input-error-message-exit {
  opacity: 1;
  transform: translateY(0px);
}
.auth-form-input-error-message-exit-active {
  opacity: 0;
  transform: translateY(-10px);
  transition: opacity 330ms ease-out, transform 330ms ease-out;
}

.auth-form-input-message {
  display: flex;
  gap: .75rem;
  background-color: var(--dark-background-color-secondary);
  color: var(--dark-text-color);
  padding: 1rem;
  border-radius: var(--border-radius);
}

.auth-form-input-message svg {
  padding-top: 5px;
}

.auth-form-input-message-enter {
  opacity: 0;
  transform: translateY(-10px);
}

.auth-form-input-message-enter-active {
  opacity: 1;
  transform: translateY(0px);
  transition: opacity 330ms ease-out;
}

.auth-form-input-message-exit {
  opacity: 1;
  transform: translateY(0px);
}

.auth-form-input-message-exit-active {
  opacity: 0;
  transform: translateY(-10px);
  transition: opacity 330ms ease-out, transform 330ms ease-out;
}

